// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonGroup > renders orientation vertical with default slot correctly 1`] = `
"<div class="relative flex flex-col -space-y-px">
  <b24input></b24input>
  <b24button> Click me! </b24button>
</div>"
`;

exports[`ButtonGroup > renders with as correctly 1`] = `"<section class="relative inline-flex -space-x-px"></section>"`;

exports[`ButtonGroup > renders with class correctly 1`] = `"<div class="inline-flex -space-x-px absolute"></div>"`;

exports[`ButtonGroup > renders with default slot correctly 1`] = `
"<div class="relative inline-flex -space-x-px">
  <b24input></b24input>
  <b24button> Click me! </b24button>
</div>"
`;

exports[`ButtonGroup > renders with size lg correctly 1`] = `
"<div class="relative inline-flex -space-x-px">
  <b24input></b24input>
  <b24button> Click me! </b24button>
</div>"
`;

exports[`ButtonGroup > renders with size md correctly 1`] = `
"<div class="relative inline-flex -space-x-px">
  <b24input></b24input>
  <b24button> Click me! </b24button>
</div>"
`;

exports[`ButtonGroup > renders with size sm correctly 1`] = `
"<div class="relative inline-flex -space-x-px">
  <b24input></b24input>
  <b24button> Click me! </b24button>
</div>"
`;

exports[`ButtonGroup > renders with size xs correctly 1`] = `
"<div class="relative inline-flex -space-x-px">
  <b24input></b24input>
  <b24button> Click me! </b24button>
</div>"
`;
